@@ -1,5 +1,7 @@
 package com.az1.app.service;
 
+import com.az1.app.model.StationModel;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.PostConstruct;
@@ -9,25 +11,28 @@ import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.HttpServerErrorException;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
+
 @Service
 public class ApiHandleService {
-    //    http://mt-api-v2:9000/api/
-    private String accessToken;
+    private String accessToken = "eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJleHAiOjE3NDgyNzM2OTEsInNjb3BlIjpbIlNZU1RFTS5TRU5ETUFJTCIsIkNBTUVSQS5FRElUIiwiU1lTVEVNLkVESVQiLCJVU0VSUy5FRElUIiwiVVNFUlMuVklFVyIsIlNZU1RFTS5WSUVXIiwiRVhDRUwuRVhQT1JUIiwiVVNFUi5QVUJMSUMiXSwicm9sZSI6WyJDQlRUX01UIiwiTVRfQURNSU4iXSwidXNlcl9uYW1lIjoiYWRtaW4iLCJqdGkiOiIyNmRhNzdmYS0wOTZiLTRiZTYtOWEwOC03NjQxODNkNTgwYWEifQ.gEcy3RSpjv7721LIPWwHu1hkBMXMePAxEpEwc0O9oz63VLULl8jlUJgRr_bLgEZuQfGTq2lVzY7a1qovPBldFrY5KfNHsqDJm0OGvRqtySgyZxbQCZVV6Fum3OBdWbElJ6NZROZ60W7YgChyGY0Qun8-8C-rXccjqTH0ZSh3iYREx4g0nOx5U21qYSqXVRJL2UCbkT9Qi4niGFjGsy9Kb-oKg6_m9BulU4ymzdyZmBksI8SfYio0VSAPBb-PzgBBjyF9iMP6ExEji32ewm-uPsUpgexWgjYma-WmUS2lqYo33gzwNPf6J2a5GVGg3zBPAyWPP1Wwke3NIX2xgSZgmQ";
 
-    @PostConstruct
-    public void init() {
-        updateToken();
-    }
-
+//    @PostConstruct
+//    public void init() {
+//        updateToken();
+//    }
+//    @PostConstruct
     public void updateToken(){
         try {
             String systemHeader = "Basic YWRtaW46RGVhaGFuU2khQDEyMw==";
             String systemHost = "http://192.168.1.61:6969/api/generate-token?appId=MT&grantType=PASSWORD_GRANT&secret=753f03e5-378a-4fa8-a343-f8dcb0bf6961";
+
             HttpHeaders headers = new HttpHeaders();
             headers.set("Authorization", systemHeader);
 
-            headers.setAccept(Arrays.asList(new MediaType[] { MediaType.APPLICATION_JSON }));
+//            headers.setAccept(List.of(MediaType.APPLICATION_JSON));
             // Yêu cầu trả về định dạng JSON
             headers.setContentType(MediaType.APPLICATION_JSON);
 
@@ -38,12 +43,14 @@ public class ApiHandleService {
             RestTemplate restTemplate = new RestTemplate();
 
             // Gửi yêu cầu với phương thức GET, và các thông tin Headers.
-            ResponseEntity<String> response = restTemplate.getForEntity(systemHost, String.class);
+            ResponseEntity<String> response =restTemplate.exchange(systemHost,HttpMethod.GET,entity, String.class);
 
             ObjectMapper mapper = new ObjectMapper();
             JsonNode rootNode = mapper.readTree(response.getBody());
             JsonNode dataNode = rootNode.get("data");
+
             this.accessToken = dataNode != null ? dataNode.get("accessToken").asText() : null;
+
 
         } catch (HttpClientErrorException | HttpServerErrorException ex) {
             System.err.println("Error occurred with status code: " + ex.getStatusCode().value());
@@ -54,8 +61,8 @@ public class ApiHandleService {
             this.accessToken = null;
         }
     }
-
-    public void getStations(int limit){
+    @PostConstruct
+    public List<StationModel> getStations(){
         if (this.accessToken == null || this.accessToken.isEmpty()) {
             System.err.println("Token không hợp lệ.");
             this.updateToken();
@@ -66,21 +73,22 @@ public class ApiHandleService {
         headers.setContentType(MediaType.APPLICATION_JSON);
         HttpEntity<String> entity = new HttpEntity<>(headers);
         RestTemplate restTemplate = new RestTemplate();
-        String url = "http://192.168.1.61:9002/api/station?page=0&pageSize=" + limit;
+        String url = "http://192.168.1.61:9002/api/station?page=0&pageSize=" + "10";
 
         try {
-            ResponseEntity<String> response = restTemplate.getForEntity(url, String.class);
+            ResponseEntity<String> response = restTemplate.exchange(url,HttpMethod.GET,entity, String.class);
             ObjectMapper mapper = new ObjectMapper();
             JsonNode rootNode = mapper.readTree(response.getBody());
-            JsonNode dataNode = rootNode.get("data");
+            JsonNode dataNode = rootNode.get("data").get("items");
+            return mapper.readValue(dataNode.toString(), new TypeReference<List<StationModel>>() {});
 
         } catch (HttpClientErrorException | HttpServerErrorException ex) {
             System.err.println("Lỗi gọi API: " + ex.getStatusCode());
             System.err.println("Phản hồi lỗi: " + ex.getResponseBodyAsString());
-//            return ResponseEntity.status(ex.getStatusCode()).body(ex.getResponseBodyAsString());
+            return new ArrayList<>();
         } catch (Exception ex) {
             System.err.println("Lỗi tổng quát: " + ex.getMessage());
-//            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Lỗi hệ thống");
+            return new ArrayList<>();
         }
     }
 }
